<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_mall"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_hotnews"
            android:icon="@drawable/ic_news"
            android:title="Hot News" />

        <item
            android:id="@+id/nav_my_bookings"
            android:icon="@drawable/ic_booking"
            android:title="@string/my_bookings" />

        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_payment"
            android:title="@string/payment" />

        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_chat"
            android:title="Support" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />

    </group>

</menu>