<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/primary_color"
        android:layout_height="match_parent"
        tools:context=".fragments.PaymentFragment">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/dots"
            app:layout_constraintBottom_toBottomOf="@+id/tvPeriod"
            app:layout_constraintEnd_toStartOf="@+id/tvPayment"
            app:layout_constraintTop_toTopOf="@+id/tvPayment" />


        <TextView
            android:id="@+id/tvPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/payment"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="Luon Vuituoi"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/tvPayment"
            app:layout_constraintTop_toBottomOf="@+id/tvPayment" />


        <TextView
            android:id="@+id/tvTime_slot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/time"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPeriod" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cv1_3hrs"
            style="@style/card_view_slot"
            app:layout_constraintStart_toStartOf="@+id/tvTime_slot"
            app:layout_constraintTop_toBottomOf="@+id/tvTime_slot">


            <TextView
                style="@style/card_view_text"
                android:text="@string/_1_3_hrs" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_3_4_hrs"
            style="@style/card_view_slot"
            app:layout_constraintEnd_toEndOf="@+id/cv1_3hrs"
            app:layout_constraintStart_toStartOf="@+id/cv1_3hrs"
            app:layout_constraintTop_toBottomOf="@+id/cv1_3hrs">


            <TextView
                style="@style/card_view_text"
                android:text="@string/_3_4_hrs" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_5_7_hrs"
            style="@style/card_view_slot"
            app:layout_constraintEnd_toEndOf="@+id/cv_3_4_hrs"
            app:layout_constraintStart_toStartOf="@+id/cv_3_4_hrs"
            app:layout_constraintTop_toBottomOf="@+id/cv_3_4_hrs">


            <TextView
                style="@style/card_view_text"
                android:text="@string/_5_7_nhours" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_7_hrs"
            style="@style/card_view_slot"
            app:layout_constraintEnd_toEndOf="@+id/cv_5_7_hrs"
            app:layout_constraintStart_toStartOf="@+id/cv_5_7_hrs"
            app:layout_constraintTop_toBottomOf="@+id/cv_5_7_hrs">


            <TextView
                style="@style/card_view_text"
                android:text="@string/_7_nhours" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvPaymentMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:text="@string/payment"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPeriod" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_debitCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="40dp"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPaymentMethod">

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/visa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/apple_grey"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPaymentMethod">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="150dp"
                android:padding="50dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_visa_logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/momo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/visa">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="150dp"
                android:padding="50dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="20dp"
                    android:src="@drawable/momo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/zalopay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/momo">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="150dp"
                android:padding="50dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="20dp"
                    android:src="@drawable/zalopay"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/total"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cv_7_hrs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_7_hrs" />


        <TextView
            android:id="@+id/tvCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="000.000 VND"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/tvTotal"
            app:layout_constraintTop_toBottomOf="@+id/tvTotal" />

        <TextView
            android:id="@+id/tv_hiddenText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="* cost may vary"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/tvTotal"
            app:layout_constraintTop_toBottomOf="@+id/tvCost" />

        <ImageButton
            android:id="@+id/ibNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@drawable/slot_booking"
            android:src="@drawable/boxback"
            app:layout_constraintBottom_toBottomOf="@+id/tvCost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvTotal" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>